--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <li><a href="#" class="header-navigation__link">Categories</a></li>
           </ul>
         </nav>
+        <div class="overlay hidden"></div>
       </div>
     </header>
     <main>
